WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
17845
[GTK] combo box menu displayed in the wrong position
https://bugs.webkit.org/show_bug.cgi?id=17845
Summary
[GTK] combo box menu displayed in the wrong position
Marco Barisione
Reported
2008-03-14 05:59:06 PDT
The popup menu used for combo boxes is displayed under the widget, but it should be displayed with the active item over it.
Attachments
Show the popup in the right position and using the "push in" style to look like a normal combo box popup
(2.57 KB, patch)
2008-03-14 08:18 PDT
,
Marco Barisione
alp
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Marco Barisione
Comment 1
2008-03-14 08:18:15 PDT
Created
attachment 19761
[details]
Show the popup in the right position and using the "push in" style to look like a normal combo box popup
Alp Toker
Comment 2
2008-03-24 09:45:31 PDT
So, I tried this patch. Good idea, but the behaviour is a bit off in some cases. Trying the first few menu lists at:
http://www.google.pt/advanced_search?hl=pt-PT
.. half the menu is unpainted (ie. gray with no decorations) If you can't reproduce this issue, let me know and I'll describe the symptoms in more detail. I'm curious, are you using the same technique used within GTK+ internally to achieve this effect?
Pierre-Luc Beaudoin
Comment 3
2008-03-24 10:01:37 PDT
Alp, Very funny: I did the same test on that patch! It happens that Gtk+ behaves that way: it leaves half the menu unpainted if the first element is selected when drawing the menu. I based my Gtk+ observations on the gnome-language-selector using a faily small (800x600) resolution. Try for yourself :) In my opinion, this patch is behaving correctly.
Alp Toker
Comment 4
2008-03-24 10:16:59 PDT
Comment on
attachment 19761
[details]
Show the popup in the right position and using the "push in" style to look like a normal combo box popup Thanks for checking that Pierre-Luc. r=me
Alp Toker
Comment 5
2008-03-24 10:18:15 PDT
Landed in
r31244
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug